<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Marko Topolnik.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_enter_api_key">We Need Your API key</string>
    <string name="enter_apikey_explanation">Good Guy Pete needs your API key to work. It accepts
        Anthropic and OpenAI keys.
        \n
        \nYou can also type in \"demo\" and enter the demo mode.
        \n
        \nGood Guy Pete will use your API key strictly to access the public API
        when you enter a prompt. Your key will be stored as a standard Android
        application preference and as such may get backed up to your Google account
        so that it is available on your other devices.
        \n
        \nGood Guy Pete is an open-source application, available at
        \nhttps://github.com/mtopolnik/Assistant
        \nwhere you can review and inspect its usage of your API key.
    </string>
    <string name="system_prompt_default">You are a helpful assistant. You are an expert and your
        goal is to always write the best, most correct answer. Your answers are concise, unless
        the user specifically asks for a longer answer.
    </string>
    <string name="realtime_instructions" translatable="false">Your knowledge cutoff is 2023-10.
        You are a helpful, witty, and friendly AI. Act like a human, but remember that you aren\'t
        a human and that you can\'t do human things in the real world. Your voice and personality
        should be warm and engaging, with a lively and playful tone. If interacting in a non-English
        language, start by using the standard accent or dialect familiar to the user. Talk quickly.
    </string>
    <string name="demo_response" tools:ignore="Typos">Demo mode is on — this is a mock response.
        \n
        \nKnock knock! Who\'s there? Not GPT, ha ha!
        \n
        \nRoses are red, violets are blue, this isn\'t GPT talking, just some random text for you!
        \n
        \nWhy did the chicken cross the road? To remind you that you\'re in demo mode!
    </string>
    <string name="about_text">
        Version %1$s
        \n© 2023-2024 Marko Topolnik
    </string>
    <string name="app_name">Good Guy Pete</string>
    <string name="menu_open">Open menu</string>
    <string name="menu_close">Close menu</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record Voice</string>
    <string name="send">Send</string>
    <string name="keyboard">Use keyboard</string>
    <string name="prompt_hint">Message</string>
    <string name="gpt4_unavailable">GPT-4o is not available with your API key.</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="archive_chat">Archive Chat</string>
    <string name="new_chat">New chat</string>
    <string name="chat">Chat</string>
    <string name="action_mute">Mute Sound</string>
    <string name="action_cancel">Stop Responding</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="action_edit_system_prompt">Edit System Prompt</string>
    <string name="title_edit_system_prompt">Edit System Prompt</string>
    <string name="action_delete_anthropic_key">Delete Anthropic Key</string>
    <string name="action_delete_openai_key">Delete OpenAI Key</string>
    <string name="action_delete_xai_key">Delete xAI Key</string>
    <string name="action_delete_deepseek_key">Delete DeepSeek Key</string>
    <string name="action_enter_api_key">Enter an API key</string>
    <string name="action_toggle_send_audio_prompt">GPT-4o audio prompt (experimental)</string>
    <string name="action_toggle_show_reasoning">Show reasoning</string>
    <string name="api_key_hint">Your API key</string>
    <string name="error_while_llm_responding">Something went wrong while Pete was replying</string>
    <string name="translation_error">Something went wrong while OpenAI was translating</string>
    <string name="transcription_error">Something went wrong while OpenAI was listening to you</string>
    <string name="recording_error">Something went wrong while Pete was recording your voice</string>
    <string name="message_incorrect_api_key">Incorrect API key. Delete it and enter a new one.</string>
    <string name="action_reset">Reset to Default</string>
    <string name="action_speak_again">Speak Again</string>
    <string name="selected_model">Selected Model</string>
    <string name="demo_recognized_speech">Demo mode is on — this is a mock question.</string>
    <string name="close">Close</string>
    <string name="action_about">About</string>
    <string name="listen_language">Voice recognition language</string>
    <string name="realtime_switch">Switch between text/voice</string>
    <string name="action_play_store">See on Play Store</string>
    <string name="action_translate">Translate to…</string>
    <string name="title_edit_languages">Add/Remove Languages</string>
    <string name="item_add_remove">Add/Remove…</string>
    <string name="search_languages">Search languages</string>
    <string name="add_language">Add language</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="press_and_hold_while_talking">Press and hold while talking</string>
    <string name="hold_for_entire_convo">Hold for the entire conversation</string>
    <string name="submenu_voice">Voice</string>
    <string name="submenu_chats">Chats</string>
    <string name="voice_builtin">built-in</string>
    <string name="voice_alloy" translatable="false">alloy</string>
    <string name="voice_echo" translatable="false">echo</string>
    <string name="voice_fable" translatable="false">fable</string>
    <string name="voice_nova" translatable="false">nova</string>
    <string name="voice_onyx" translatable="false">onyx</string>
    <string name="voice_shimmer" translatable="false">shimmer</string>
</resources>
