<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Marko Topolnik.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >
    <item
            android:id="@+id/action_gpt_toggle"
            android:title="@string/gpt_4"
            app:actionLayout="@layout/button_gpt_toggle"
            android:visible="false"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    <item
            android:id="@+id/action_speak_again"
            android:title="@string/action_speak_again"
            android:icon="@drawable/baseline_refresh_24"
            app:iconTint="@color/appbar_icon_color_selector"
            android:enabled="false"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_sound_toggle"
            android:title="@string/action_mute"
            android:icon="@drawable/baseline_volume_up_24"
            android:checkable="true"
            app:iconTint="@color/appbar_icon_color_selector"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_undo"
            android:title="@string/action_undo"
            android:icon="@drawable/baseline_undo_24"
            app:iconTint="@color/appbar_icon_color_selector"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_cancel"
            android:title="@string/action_cancel"
            android:icon="@drawable/baseline_cancel_24"
            app:iconTint="@color/appbar_icon_color_selector"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_clear_chat_history"
            android:title="@string/clear_chat_history"
            android:icon="@drawable/baseline_delete_24"
            app:iconTint="@color/appbar_icon_color_selector"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_about"
            android:title="@string/action_about"
            app:showAsAction="never" />
    <item
            android:id="@+id/submenu_voice"
            android:title="@string/submenu_voice"
            app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/voice_builtin"
                android:title="@string/voice_builtin"
                android:checkable="true" />
            <item
                android:id="@+id/voice_alloy"
                android:title="@string/voice_alloy"
                android:checkable="true" />
            <item
                android:id="@+id/voice_echo"
                android:title="@string/voice_echo"
                android:checkable="true" />
            <item
                android:id="@+id/voice_fable"
                android:title="@string/voice_fable"
                android:checkable="true" />
            <item
                android:id="@+id/voice_nova"
                android:title="@string/voice_nova"
                android:checkable="true" />
            <item
                android:id="@+id/voice_onyx"
                android:title="@string/voice_onyx"
                android:checkable="true" />
            <item
                android:id="@+id/voice_shimmer"
                android:title="@string/voice_shimmer"
                android:checkable="true" />
        </menu>
    </item>
    <item
            android:id="@+id/action_edit_system_prompt"
            android:title="@string/action_edit_system_prompt"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_play_store"
            android:title="@string/action_play_store"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_delete_openai_key"
            android:title="@string/action_delete_openai_key"
            app:showAsAction="never" />
</menu>
