<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Marko Topolnik.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        >

    <TextView
            android:id="@+id/textview_apikey_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/title_enter_api_key"
            android:textSize="24sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            />

    <ScrollView
            android:id="@+id/scrollview_explanation"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            >
        <TextView
                android:id="@+id/textview_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_apikey_explanation"
                android:textSize="18sp"
                android:textIsSelectable="true"
                android:editable="false"
                />
    </ScrollView>

    <EditText
            android:id="@+id/edittext_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/api_key_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            />

    <Button
            android:id="@+id/button_apikey_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary"
            android:text="@string/action_save"
            android:textColor="@color/on_primary"
            android:textSize="18sp"
            />

</LinearLayout>
