<!--
  ~ Copyright (c) 2023 Marko Topolnik.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ActionBar"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >

            <EditText
                    android:id="@+id/edittext_system_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/title_edit_system_prompt"
                    android:inputType="textMultiLine|textCapSentences"
                    android:importantForAutofill="no"
                    />
        </ScrollView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button_translate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="24dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:backgroundTint="@color/secondary"
                    android:text="@string/action_translate"
                    android:textColor="@color/secondary_button_color_selector"
                    android:textSize="18sp"
                    />
            <Button
                    android:id="@+id/button_save_system_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="24dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:backgroundTint="@color/primary"
                    android:text="@string/action_save"
                    android:textColor="@color/primary_button_color_selector"
                    android:textSize="18sp"
                    />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
