<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/coordinator_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimary"
                        app:layout_scrollFlags="scroll|enterAlways" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                    android:id="@+id/scrollview_chat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview_chat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
                android:id="@+id/prompt_section"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/scrollview_chat"
                app:layout_anchorGravity="bottom"
                android:layout_gravity="bottom"
                android:padding="8dp"
                >

            <EditText
                    android:id="@+id/edittext_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_hint"
                    android:autofillHints=""
                    android:inputType="textCapSentences|textMultiLine"
                    android:privateImeOptions="inputType=textImeMultiLine"
                    android:imeOptions="actionDone|flagNavigateNext"
                    android:maxLines="4"
                    />

            <ImageButton
                    android:id="@+id/button_record"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_mic_28"
                    app:tint="@color/white"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/send_message"
                    android:contentDescription="@string/record"
                    />
            <ImageButton
                    android:id="@+id/button_send"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:visibility="gone"
                    android:src="@drawable/baseline_send_28"
                    app:tint="@color/white"
                    android:paddingLeft="4dp"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/send_message"
                    android:contentDescription="@string/send"
                    />
            <ImageButton
                    android:id="@+id/button_stopResponding"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:visibility="gone"
                    android:src="@drawable/baseline_cancel_28"
                    app:tint="@color/white"
                    android:background="@drawable/round_button"
                    android:backgroundTint="@color/stop_responding"
                    android:contentDescription="@string/send"
                    />
        </LinearLayout>
    </LinearLayout>

    <org.mtopol.assistant.RecordingGlowView
            android:id="@+id/recording_glow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:visibility="invisible"
            />
</FrameLayout>
