<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023 Marko Topolnik.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
            android:id="@+id/chat_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/chat_background">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/coordinator_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_scrollFlags="scroll|enterAlways"
                        android:theme="@style/ActionBar"
                        app:popupTheme="@style/OverflowPopupTheme"
                        />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                    android:id="@+id/scrollview_chat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                        android:id="@+id/view_chat"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/prompt_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_anchor="@id/scrollview_chat"
                app:layout_anchorGravity="bottom"
                android:layout_gravity="bottom"
                android:padding="8dp"
                >

            <EditText
                    android:id="@+id/edittext_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/button_send"
                    app:layout_constraintWidth_default="spread"
                    android:visibility="gone"
                    android:hint="@string/prompt_hint"
                    android:autofillHints=""
                    android:inputType="textCapSentences|textMultiLine"
                    android:privateImeOptions="inputType=textImeMultiLine"
                    android:imeOptions="actionDone|flagNavigateNext"
                    android:maxLines="7"
                    />
            <Button
                    android:id="@+id/button_send"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="?attr/materialIconButtonFilledStyle"
                    app:icon="@drawable/baseline_send_28"
                    app:iconSize="28dp"
                    app:iconTint="?attr/colorOnPrimary"
                    app:iconPadding="4dp"
                    app:iconGravity="textEnd"
                    app:backgroundTint="?attr/colorPrimary"
                    android:visibility="gone"
                    android:contentDescription="@string/send"
                    />

            <Button
                    android:id="@+id/button_keyboard"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="?attr/materialIconButtonFilledStyle"
                    app:icon="@drawable/baseline_keyboard_28"
                    app:iconSize="28dp"
                    app:iconTint="@color/on_keyboard_button"
                    app:iconGravity="textEnd"
                    app:backgroundTint="@color/keyboard_button"
                    android:contentDescription="@string/send"
                    />
            <Button
                    android:id="@+id/button_record"
                    android:layout_width="0dp"
                    android:layout_height="58dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button_keyboard"
                    app:layout_constraintEnd_toStartOf="@id/button_language"
                    app:layout_constraintWidth_default="spread"
                    style="?attr/materialIconButtonFilledStyle"
                    app:icon="@drawable/baseline_mic_28"
                    app:iconSize="28dp"
                    app:iconTint="@color/primary_button_color_selector"
                    app:iconGravity="textEnd"
                    app:backgroundTint="?attr/colorPrimary"
                    android:contentDescription="@string/record"
                    />
            <Button
                    android:id="@+id/button_language"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="?attr/materialIconButtonFilledStyle"
                    app:icon="@drawable/baseline_record_voice_over_28"
                    app:iconSize="28dp"
                    app:iconTint="@color/on_keyboard_button"
                    app:iconGravity="textEnd"
                    app:backgroundTint="@color/keyboard_button"
                    android:textSize="18dp"
                    android:visibility="visible"
                    android:contentDescription="@string/listen_language"
                    />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <org.mtopol.assistant.TouchImageView
            android:id="@+id/img_zoomed"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

    <org.mtopol.assistant.RecordingGlowView
            android:id="@+id/recording_glow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:visibility="invisible"
            />
</FrameLayout>
